--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ spl-token = { version = "3.2", path = "../../token/program", features = [ "no-en
 thiserror = "1.0"
 arbitrary = { version = "0.4", features = ["derive"], optional = true }
 roots = { version = "0.0.7", optional = true }
+uint = "0.9"
 
 [dev-dependencies]
 solana-sdk = "1.7.7"
