--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ num-traits = "0.2"
 solana-program = "1.7.7"
 spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
 spl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
+spl-token-lending = {version = "0.1.0", path = "../../token-lending/program", features = [ "no-entrypoint" ]}
 thiserror = "1.0"
 arbitrary = { version = "0.4", features = ["derive"], optional = true }
 roots = { version = "0.0.7", optional = true }
